--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Enter The Metro!</h1>
     <div class="container" style="height: 65vh; width: 75; margin: 0 auto; text-align: center">
-        <img src="img/pic1'.jpeg" style="height: 100%; width: 100%; object-fit: cover">
+        <img id="image" src="img/pic1'.jpeg" style="height: 100%; width: 100%; object-fit: cover">
         <button onclick="changeImage()">Enter the Metro !</button>
     </div>
 
